# skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  generate-readme.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml  validate-skills.yml
claude-permissions-audit/: SKILL.md
claude-skill-orchestration-audit/: SKILL.md
claude-skill-orchestration-audit/references/: agent-skill-analyzer.md  subagent-orchestration-best-practices.md
claude-skill-prereq-audit/: SKILL.md
claude-skill-spec-audit/: SKILL.md
dev-cli-consistency-audit/: SKILL.md
dev-code-quality/: SKILL.md
dev-new-tool/: SKILL.md
dev-software-design/: SKILL.md
dev-software-design/references/: principles.md
gh-dep-pr-triage/: SKILL.md
gh-issue-report/: SKILL.md
gh-org-chart/: SKILL.md
gh-org-chart/scripts/: collect.sh  render.py
gh-oss-go-bump/: SKILL.md
gh-oss-release/: SKILL.md
gh-oss-release-prep/: SKILL.md
gh-oss-release-prep/references/: go-conventions.md
gh-review-triage/: SKILL.md
gh-review-triage/references/: cascade.md
git-conventional-commit/: SKILL.md
gws-meeting-scheduler/: SKILL.md
p-activity-digest/: SKILL.md
p-blog-post-mining/: SKILL.md
p-blog-writer/: SKILL.md
p-daily-reflection/: SKILL.md
p-daily-reflection/references/: agent-gather-claude-history.md  (+3 more)
p-daily-report/: SKILL.md
p-daily-standup/: SKILL.md
p-ego-search/: SKILL.md
p-md-to-slides/: SKILL.md
p-meeting-prep/: SKILL.md
p-news-briefing/: SKILL.md
p-slack-triage/: SKILL.md
project-namer/: SKILL.md
restaurant-search/: SKILL.md
(+48 files in other folders)
